# langchain-academy

./: .env.example  .gitignore  pyproject.toml  uv_commands.md
module-0/: basics-reverse-proxy.py  basics.ipynb  basics.py
module-1/: agent-memory.ipynb  agent-memory.py  agent.ipynb  agent.py  chain.ipynb  chain.py  deployment.ipynb  deployment.py  router.ipynb  router.py  simple-graph.ipynb  simple-graph.py
module-1/studio/: agent.py  my_layout.xkm  router.py
module-2/: chatbot-external-memory.ipynb  chatbot-external-memory.py  chatbot-summarization.ipynb  chatbot-summarization.py  multiple-schemas.ipynb  multiple-schemas.py  state-reducers.ipynb  state-reducers.py  state-schema.ipynb  state-schema.py  trim-filter-messages.ipynb  trim-filter-messages.py
module-2/state_db/: example.db-shm  example.db-wal
module-2/studio/: chatbot.py
module-3/: breakpoints.ipynb  breakpoints.py  dynamic-breakpoints.ipynb  dynamic-breakpoints.py  dynamic-breakpoints.ts  edit-state-human-feedback.ipynb  edit-state-human-feedback.py  edit-state-human-feedback.ts  streaming-interruption.ipynb  streaming-interruption.py  streaming-interruption.ts  time-travel.ipynb  time-travel.py  time-travel.ts
module-3/studio/: agent.py
module-4/: map-reduce.ipynb  parallelization.ipynb  research-assistant.ipynb  sub-graph.ipynb
module-4/studio/: .env.example  map_reduce.py  parallelization.py  (+1 more)
module-5/: memory_agent.ipynb  memory_store.ipynb  memoryschema_collection.ipynb  memoryschema_profile.ipynb
module-6/: assistant.ipynb  connecting.ipynb  double-texting.ipynb
(+12 files in other folders)
