[project]
name = "langchain-academy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-community>=0.3.8",
    "langchain-core>=0.3.21",
    "langchain-openai>=0.2.10",
    "langgraph>=0.2.53",
    "langgraph-checkpoint-sqlite>=2.0.1",
    "langgraph-cli[inmem]==0.1.61",
    "langgraph-sdk>=0.1.40",
    "langsmith>=0.1.147",
    "notebook>=7.2.2",
    "tavily-python>=0.5.0",
    "trustcall>=0.0.26",
    "wikipedia>=1.4.0",
    "sympy>=1.13.3",
]
