[project]
name = "langchain-academy"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.68",
    "langchain-google-genai>=2.1.6",
    "langchain-openai>=0.3.27",
    "langchain-tavily>=0.2.7",
    "langgraph>=0.5.1",
    "langgraph-checkpoint-sqlite>=2.0.10",
    "langgraph-cli[inmem]>=0.3.3",
    "langgraph-prebuilt>=0.5.2",
    "langgraph-sdk>=0.1.72",
    "langsmith>=0.4.4",
    "notebook>=7.4.4",
    "tavily-python>=0.7.9",
    "trustcall>=0.0.39",
    "wikipedia>=1.4.0",
]
